--- a/puritans.html
+++ b/puritans.html
@@ -71,7 +71,7 @@
                     be more integrated with the community. This, among his many social reforms would be adopted by, 
                     and expanded upon by John Calvin. Many new ideas like this would eventually 
                     grow into the Puritan's unique communities and revolutionary social behaviors<br><br>
-                    
+                    <i>Relevant dates</i>
                 </p>
                 <ul>1517 - Martin Luther nails his 95 Thesis to the church door</ul>
                 <ul>1522 - Ulrich Zwingli openly challenges the Catholic Church</ul>
