--- a/puritans.html
+++ b/puritans.html
@@ -78,15 +78,18 @@
                 <ul>1536 - John Calvin publishes Institutes of the Christian Religion</ul>
              </p>
              <p><b>The English Reformation</b><br>
-                Even though Zwingli and Calvin's were in Switzerland during their day, their ideas had spread and 
+                Even though Zwingli and Calvin were in Switzerland during their day, their ideas had spread and 
                 would be adopted by people in manay places. This where we get to the English Reformation and the 
                 formation of the Anglican Church. Henry VIII was a supporter of the Catholic Church during his 
                 early years. Trouble started because his marriage to Catherine of Aragon had produced no male heirs 
                 and he had fallen in love with Catherine's ladie-in-waiting, Anne Boleyn. The Church refused to 
-                give him a divorce, so he eventually married her in private. Soon after, in a power grab, Henry VIII 
+                give him a marriage annulement. He eventually married Boleyn anyway. Soon after, in a power grab, Henry VIII 
                 passed the Act of Supremacy which declared him the head of the Church of England. This severed the 
-                power of the Roman Church over England. History is complicated and events do not happen in a vacuum. 
-                His desire for a divorce was just a very prominent motive of which we are aware.<br><br>
+                power of the Roman Church over England, which allowed Henry VIII grant his own annulement. 
+                History is complicated and events do not happen in a vacuum. 
+                His desire for a divorce was just a very prominent motive of which we are aware. The consequencs of 
+                his behavior were signifacant, so there were likely deeper motives involved that we are not going 
+                to explore at this moment.<br><br>
 
                 <ul>1534 - Henry VIII passes the Act of Supremacy</ul>
                 <ul>1620s & 1630s - The Puritan Great Migration.</ul>
