--- a/puritans.html
+++ b/puritans.html
@@ -87,9 +87,8 @@
                 passed the Act of Supremacy which declared him the head of the Church of England. This severed the 
                 power of the Roman Church over England, which allowed Henry VIII grant his own annulement. 
                 History is complicated and events do not happen in a vacuum. 
-                His desire for a divorce was just a very prominent motive of which we are aware. The consequencs of 
-                his behavior were signifacant, so there were likely deeper motives involved that we are not going 
-                to explore at this moment.<br><br>
+                His desire for an annulement was just a very prominent motive of which we are aware. The consequencs of 
+                his behavior were signifacant, so there were likely deeper motives involved.<br><br>
 
                 <ul>1534 - Henry VIII passes the Act of Supremacy</ul>
                 <ul>1620s & 1630s - The Puritan Great Migration.</ul>
