--- a/puritans.html
+++ b/puritans.html
@@ -78,7 +78,7 @@
                 <ul>1536 - John Calvin publishes Institutes of the Christian Religion</ul>
              </p>
              <p><b>The English Reformation</b><br>
-                Even though Zwingli and Calvin were in Switzerland during their day, their ideas had spread and 
+                <p>Even though Zwingli and Calvin were in Switzerland during their day, their ideas had spread and 
                 would be adopted by people in manay places. This where we get to the English Reformation and the 
                 formation of the Anglican Church. Henry VIII was a supporter of the Catholic Church during his 
                 early years. Trouble started because his marriage to Catherine of Aragon had produced no male heirs 
@@ -89,7 +89,7 @@
                 History is complicated and events do not happen in a vacuum. 
                 His desire for an annulement was just a very prominent motive of which we are aware. The consequencs of 
                 his behavior were signifacant, so there were likely deeper motives involved.<br><br>
-
+                </p>
                 <ul>1534 - Henry VIII passes the Act of Supremacy</ul>
                 <ul>1620s & 1630s - The Puritan Great Migration.</ul>
              </p><br>
