--- a/puritans.html
+++ b/puritans.html
@@ -89,6 +89,9 @@
                 History is complicated and events do not happen in a vacuum. 
                 His desire for an annulement was just a very prominent motive of which we are aware. The consequencs of 
                 his behavior were signifacant, so there were likely deeper motives involved.<br><br>
+                
+                <br><br>
+                <i>Relevant dates</i>
                 </p>
                 <ul>1534 - Henry VIII passes the Act of Supremacy</ul>
                 <ul>1620s & 1630s - The Puritan Great Migration.</ul>
