--- a/puritans.html
+++ b/puritans.html
@@ -84,12 +84,15 @@
                 early years. Trouble started because his marriage to Catherine of Aragon had produced no male heirs 
                 and he had fallen in love with Catherine's ladie-in-waiting, Anne Boleyn. The Church refused to 
                 give him a marriage annulement. He eventually married Boleyn anyway. Soon after, in a power grab, Henry VIII 
-                passed the Act of Supremacy which declared him the head of the Church of England. This severed the 
-                power of the Roman Church over England, which allowed Henry VIII grant his own annulement. 
-                History is complicated and events do not happen in a vacuum. 
-                His desire for an annulement was just a very prominent motive of which we are aware. The consequencs of 
-                his behavior were signifacant, so there were likely deeper motives involved.<br><br>
-                
+                passed the Act of Supremacy which declared him the head of the Anglican Church of England. This severed the 
+                power of the Roman Church over England, which allowed Henry VIII grant his own annulement.<br><br>
+                While the rest of Europe were engaging in fights for drastic reform, Henry VIII kept many of the 
+                traditions of the Roman Church. This is where the Puritans come in. Because the Anglican church kept 
+                many of the traditions and structures of the Roman Church, there were many who felt that there was more 
+                room reformation. Eliminating the hierachical structures of the church and adopting a bible only interpration 
+                of the faith for example. Many of their oppenants refered to them as Puritans because they were essentially 
+                trying to Purify the church. The name was originally given as a pejoritve, but it was eventually adopted 
+                by the Puritans with a sense of pride.
                 <br><br>
                 <i>Relevant dates</i>
                 </p>
