--- a/puritans.html
+++ b/puritans.html
@@ -92,7 +92,10 @@
                 room reformation. Eliminating the hierachical structures of the church and adopting a bible only interpration 
                 of the faith for example. Many of their oppenants refered to them as Puritans because they were essentially 
                 trying to Purify the church. The name was originally given as a pejoritve, but it was eventually adopted 
-                by the Puritans with a sense of pride.
+                by the Puritans with a sense of pride.<br><br>
+                Theologically, they were a continuation of the Calvinist beliefs. They had their own unique position though, 
+                and this is what would make them such a distinct group in world history. The Calvists followed the tenents 
+                that are often simplified in the acronym 'TULIP'.
                 <br><br>
                 <i>Relevant dates</i>
                 </p>
