--- a/puritans.html
+++ b/puritans.html
@@ -95,7 +95,10 @@
                 by the Puritans with a sense of pride.<br><br>
                 Theologically, they were a continuation of the Calvinist beliefs. They had their own unique position though, 
                 and this is what would make them such a distinct group in world history. The Calvists followed the tenents 
-                that are often simplified in the acronym 'TULIP'.
+                that are often simplified in the acronym 'TULIP'. These are, Total Depravity, Unconditional Election, Limited 
+                Atonement, Irresitable Grace and Persiverence of the Saints. The Puritans kept similar beliefs to these tenets 
+                but with their own interpretation that made them very distinct from other Calvinists. For example, the Puritans 
+                believed that humans had more agency in their role of salvation then the Calvinists.
                 <br><br>
                 <i>Relevant dates</i>
                 </p>
