--- a/puritans.html
+++ b/puritans.html
@@ -98,7 +98,10 @@
                 that are often simplified in the acronym 'TULIP'. These are, Total Depravity, Unconditional Election, Limited 
                 Atonement, Irresitable Grace and Persiverence of the Saints. The Puritans kept similar beliefs to these tenets 
                 but with their own interpretation that made them very distinct from other Calvinists. For example, the Puritans 
-                believed that humans had more agency in their role of salvation then the Calvinists.
+                believed that humans had more agency in their role of salvation then the Calvinists. This sense of agency in a 
+                addition to the intensity that they inherited from Calvinsist theology had strong results in their personal 
+                beliefs and behaviors. It may not be the only contributing factor, but it helped lead the the famous Puritan 
+                work ethic that trasplanted itself in the New World.
                 <br><br>
                 <i>Relevant dates</i>
                 </p>
