--- a/puritans.html
+++ b/puritans.html
@@ -85,23 +85,23 @@
                 and he had fallen in love with Catherine's ladie-in-waiting, Anne Boleyn. The Church refused to 
                 give him a marriage annulement. He eventually married Boleyn anyway. Soon after, in a power grab, Henry VIII 
                 passed the Act of Supremacy which declared him the head of the Anglican Church of England. This severed the 
-                power of the Roman Church over England, which allowed Henry VIII grant his own annulement.<br><br>
+                power of the Roman Church over England, which allowed Henry VIII to grant his own annulement.<br><br>
                 While the rest of Europe were engaging in fights for drastic reform, Henry VIII kept many of the 
                 traditions of the Roman Church. This is where the Puritans come in. Because the Anglican church kept 
                 many of the traditions and structures of the Roman Church, there were many who felt that there was more 
                 room reformation. Eliminating the hierachical structures of the church and adopting a bible only interpration 
                 of the faith for example. Many of their oppenants refered to them as Puritans because they were essentially 
-                trying to Purify the church. The name was originally given as a pejoritve, but it was eventually adopted 
+                trying to purify the church. The name was originally given as a pejoritve, but it was eventually adopted 
                 by the Puritans with a sense of pride.<br><br>
                 Theologically, they were a continuation of the Calvinist beliefs. They had their own unique position though, 
                 and this is what would make them such a distinct group in world history. The Calvists followed the tenents 
                 that are often simplified in the acronym 'TULIP'. These are, Total Depravity, Unconditional Election, Limited 
                 Atonement, Irresitable Grace and Persiverence of the Saints. The Puritans kept similar beliefs to these tenets 
                 but with their own interpretation that made them very distinct from other Calvinists. For example, the Puritans 
-                believed that humans had more agency in their role of salvation then the Calvinists. This sense of agency in a 
-                addition to the intensity that they inherited from Calvinsist theology had strong results in their personal 
-                beliefs and behaviors. It may not be the only contributing factor, but it helped lead the the famous Puritan 
-                work ethic that trasplanted itself in the New World.
+                believed in an external expression of their predestined salvation. This, in a 
+                addition to their rigorous theological intensity inherited from the Calvinsist had strong results in their personal 
+                beliefs and behaviors. Though not the only contributing factor, it helped lead the the famous Puritan 
+                work ethic that trasplanted itself in the New World and eventually into American culture.
                 <br><br>
                 <i>Relevant dates</i>
                 </p>
