--- a/puritans.html
+++ b/puritans.html
@@ -108,8 +108,32 @@
                 <ul>1534 - Henry VIII passes the Act of Supremacy</ul>
                 <ul>1620s & 1630s - The Puritan Great Migration.</ul>
              </p><br>
-             <p><h2>The New World</h2><br>
-                <b>First Signifacant Settlements</b>
+             <h2>The New World</h2><br>
+
+            <p>Though they all felt that there was a need for a stricter adherence to biblical principles, some 
+                members of the Puritan had differing views on what that meant. They mainstream Puritans sought to 
+                purify the Anglican Church from within, essentially removing what they felt were not scripture 
+                based traditions. Even though there was often contention between them and the Anglicans, these 
+                Puritans were functional members of England and held many powerful positions in the country.<br><br>
+                There were also those that felt that the Church of England should be completely abandoned in favor 
+                of their beliefs in a scripture only religion. This sect is refered to as the Separatists. Their 
+                refusal to submit to the society around them ultimately led them away from England in search of a 
+                new home. This religious journey they were on was thought of as a pilgrimage, which is why they are 
+                often thought of as the Pilgrims. They same ones that had the first thanksgiving at Plymouth in 1620. 
+                They originally attempted to relocate in the Netherlands, but eventually ended up making their way to 
+                the New World.<br><br>
+                Puritans were not the first settlement in the New World. Jamestown was founded in 1607 in virginia and 
+                there were many other successful colonies from other nations throughout the Americas. One example being 
+                St. Augustine, Floirda, which was founded by the Spanish in 1565 and is still around today. 
+                The Separatists were the first, successful, permanant colony in New England. They were the first of many 
+                Puritans that were to follow in what would be refered to as the Great Migration. Religous persectution 
+                had increased in England, which led thousands of Puritans to escape the New World in the 1620s and 1630s. 
+                These Puritans settled close by to the Separatist. Salem and Boston, Massachusetts were among their first 
+                settlements.
+            </p>
+
+
+             <p><b>First Signifacant Settlements</b>
                 <ul>1620 - Plymouth Rock.</ul>
                 <ul>1626 - Salem, Massachusetts</ul>
                 <ul>1630 - Boston, Massachusetts.</ul>
