add-flexbox-to-links

--- a/literature.html
+++ b/literature.html
@@ -15,7 +15,7 @@
                 enjoy reading and gaining new understading. This whole webpage is merely for the 
                 purpose of sharing the things I have found interesting along the way.</p>
          </section>
-
+    <div class="content-container">
           <section class="book-reviews">
         <h3>Book Reviews</h3>
         <ul>
@@ -30,7 +30,7 @@
                     <li><a href="puritans.html">The Separatists/Puritans</a></li>
               </ul>
          </section>
-
+    </div>
          <footer>&copy; 2024 The Proto Realist</footer>
     </body>
 </html>
