--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Muse and the Machine</title>
-  <link rel="stylesheet" href="experimental-style-home.css">
+  <link rel="stylesheet" href="style-home.css">
 </head>
 <body>
   <header>
