--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Muse and the Machine</title>
-  <link rel="stylesheet" href="style-home.css">
+  <link rel="stylesheet" href="style-index.css">
 </head>
 <body>
-  <header>
-    <h1>The Muse and the Machine</h1> 
+  <header class="header-android">
   </header>
   
   <main>
     <section class="intro">
+      <h1>The Muse and the Machine</h1> 
+
       <p>Welcome to a space where antiquity and modernity converge. Dive into discussions where we explore 
         the impacts of technology through the lens of timeless wisdom.</p>
-    </section>
+    </section>      
     
     <article>
       <p>
