--- a/tech.html
+++ b/tech.html
@@ -20,6 +20,7 @@
             <nav>
                 <ul>
                     <li><a href="1st-blog.html">First Blog</a></li>
+                    <li><a href="networks.html">Breaking Down Networks</a></li>
                 </ul>
             </nav>
         </main>
