--- a/networks.html
+++ b/networks.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device, initial-scale=1.0">
     <title>Breaking Down Networks</title>
-    <link rel="stylesheet" href="file.css">
+    <link rel="stylesheet" href="networks.css">
   </head>
   <body>
     <header>
