--- a/tech.html
+++ b/tech.html
@@ -13,13 +13,18 @@
         </header>
         <main>
             <article>
-                <p>Here are the links to technology
-                    articles
-                </p>
+                <p>One of my highest axiomatic beliefs is that we all should leave the world a 
+                little better than we found it. This is why I am sharing my journey through 
+                technology world. Anyone with a passion for this subject invariably spends 
+                countless hours studying and exploring and I wanted my efforts to have a 
+                greater impact than just my learning. I am hopeful that my interests and insights 
+                will help others along the way. Everytime someone sincerely contributes to a field, 
+                we all benefit.<br><br>
+                No matter how small the impact, these are my personal understandings and descriptionns 
+                of the technologies I am exploring.</p>
             </article>
             <nav>
                 <ul>
-                    <li><a href="1st-blog.html">First Blog</a></li>
                     <li><a href="networks.html">Breaking Down Networks</a></li>
                 </ul>
             </nav>
