--- a/tech.html
+++ b/tech.html
@@ -5,7 +5,7 @@
         <meta name="viewpoint" content=
         "width=device-width, initial-scale=1.0">
         <title>Tech Articles</title>
-        <link rel="stylesheet" href="style2.css">
+        <link rel="stylesheet" href="tech.css">
     </head>
     <body>
         <header>
