--- a/networks.html
+++ b/networks.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device, initial-scale=1.0">
-    <title>Breaking Down Networks</title>
+    <title>Breaking Down IT Networks</title>
     <link rel="stylesheet" href="networks.css">
   </head>
   <body>
     <header>
-      <h1>Breaking Down Networks</h1>
+      <h1>Breaking Down IT Networks</h1>
     </header>
     <main>
       <article>
