--- a/tech.html
+++ b/tech.html
@@ -14,13 +14,13 @@
         <main>
             <article>
                 <p>One of my highest axiomatic beliefs is that we all should leave the world a 
-                little better than we found it. This is why I am sharing my journey through 
+                little better than we found it. This is why I am sharing my journey through the 
                 technology world. Anyone with a passion for this subject invariably spends 
                 countless hours studying and exploring and I wanted my efforts to have a 
                 greater impact than just my learning. I am hopeful that my interests and insights 
                 will help others along the way. Everytime someone sincerely contributes to a field, 
                 we all benefit.<br><br>
-                No matter how small the impact, these are my personal understandings and descriptionns 
+                No matter how small the impact, these are my personal understandings and descriptions 
                 of the technologies I am exploring.</p>
             </article>
             <nav>
