--- a/networks.html
+++ b/networks.html
@@ -24,7 +24,7 @@
         <h3>Protocols</h3>
         <nav>
           <ul>
-            
+            <li><a href="mpls.html">MPLS</a></li>
           </ul>
         </nav>
       </section>
