--- a/mpls.html
+++ b/mpls.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>MPLS Protocol</title>
-      <link rel="stylesheet" href="mpls.css">
+      <link rel="stylesheet" href="style_mpls.css">
     </head>
     <body>
       <header>
