--- a/mpls.html
+++ b/mpls.html
@@ -37,7 +37,8 @@
             path. It now needs to make the best decision of what is available to continue on its way.
           </p>
 
-          <img src="ip_traffic.png" alt="Traditional IP Routing">
+        <!-- <img src="ip_traffic.png" alt="Traditional IP Routing"> -->
+
             
 
            <p>Now, the MPLS packet is more like a passenger riding on a train. A real-world train 
@@ -57,7 +58,7 @@
             the ticket to the router. Then the passenger (packet) goes along for the ride without 
             asking for any directions.
            </p>
-          <img src="mpls_traffic.png" alt="MPLS Routing">
+          <!--<img src="mpls_traffic.png" alt="MPLS Routing">-->
           
             <p>
             <strong>Advantages</strong>
