--- a/literature.html
+++ b/literature.html
@@ -8,7 +8,7 @@
     </head>
     <body>
          <section class="header-content">
-            <img src="DALLE-book2.png" alt="Book Image" class="header-image">
+            <!--<img src="DALLE-book2.png" alt="Book Image" class="header-image">-->
             <h1><b>Literature</b></h1>
             <p>Here I have links to articles I have written about various types of literature. 
                 I have no intention of creating an academic level study of any subject. I just 
