--- a/networks.html
+++ b/networks.html
@@ -25,6 +25,7 @@
         <nav>
           <ul>
             <li><a href="mpls.html">MPLS</a></li>
+            <li><a href="icmp.html">ICMP</a></li>
           </ul>
         </nav>
       </section>
