--- a/icmp.html
+++ b/icmp.html
@@ -8,7 +8,7 @@
     <header><h1>Internet Control Message Protocol (ICMP)</h1></header>
     <main>
       <article>
-        <h2>ICMP: a Network Layer Protocol - OSI Layer 3/h2>
+        <h2>ICMP: a Network Layer Protocol - OSI Layer 3</h2>
         <p>
           <strong>ICMP Basics</strong><br><br>
           Introduced in 1981, the Internet Control Message Protocol (ICMP) is a fundamental part of the TCP/IP suite. Because of its automated messages that 
