--- a/mpls.html
+++ b/mpls.html
@@ -12,25 +12,26 @@
       </header>
       <main>
         <article>
-          <h3>The Basics of MPLS</h3>
-          <p>This is a protocol that operates at the network layer in the OSI model. 
+          <h2>The Basics of MPLS</h2>
+          <p>With the purpose of improving packet speed over the internet, MPLS was formulated in the 1990s. 
+            This is a protocol that operates at the network layer in the OSI model. 
             Because it has attributes that resemble those of the Data Link layer, it is described as 
             operating at layer 2.5 of the OSI Model. Essentially between the Data link and 
             Network layers.<br><br>
             
-            It is typically faster than using the standard internet protocols because of its 
+            It is typically faster than using the standard internet protocol because of its 
             use of pre-planned routes. These routes are called Label Switched Paths (LSP). 
-            Another unique characteristic of MPLS is the Label. While traditional protocols 
-            rely on IP addresses to route packets, MPLS uses labels. The functional difference 
+            Another unique characteristic of MPLS is the Label. While the traditional protocol 
+            relies on IP addresses to route packets, MPLS uses labels. The functional difference 
             lies in how they traverse the routers on their hops.
           </p>
           <p>  
             <strong>Train Ride Analogy</strong>
             <br><br>
             
-            The typical internet protocol 
+            The standard internet protocol 
             would be like a driver in a car trying to find their way through rush-hour traffic. 
-            This driver knows the destination address, but does not know how to get there. So 
+            This driver knows the destination address, but does not know how to get there. So the 
             driver, (packet) stops at every intersection (router) along the way to ask for 
             directions. This is time consuming because a calculation needs to take place at 
             every hop. Another downside is when the packet runs into a congested or broken 
@@ -45,7 +46,7 @@
             follows tracks that are put into place long before the train or passenger starts 
             their journey. This means that the engineers were able to plan out the most efficient 
             routes to avoid damaged areas and congested areas. This makes for faster paths compared 
-            to last minute adjustments along the way. For unexpected obstacles, there are backup 
+            to last minute adjustments made along the way. For unexpected obstacles, there are backup 
             routes already assigned. The tracks in our analogy would 
             be the Label Switched Paths (LSP) in a network. Just like train tracks are planned 
             by Railway Engineers, the LSP is laid out by Network Engineers.
@@ -54,7 +55,7 @@
             <br><br>
 
             Now our analogous passenger has a ticket book to ride the train. This would be the Label 
-            on the MPLS packet. Now as the passenger (packet) hops from network to network, they show 
+            on the MPLS packet. As the passenger (packet) hops from network to network, they show 
             the ticket to the router. Then the passenger (packet) goes along for the ride without 
             asking for any directions.
            </p>
@@ -75,7 +76,7 @@
             Now, the meaning of the name Multi-Protocol Label Switching. 'Multi Protocol' simply means that 
             it is capable of encapsulating many different types of protocols. The 'Label Switching' part requires  
             some explanation. In our earlier analogy, the label was much like a ticket that allowed the 
-            packet to get onto the Label Switch Path (LSP).<br><br>
+            packet to get onto the Label Switched Path (LSP).<br><br>
 
             Because of the vastness of the internet, there are many individual LSPs that a packet may need 
             travel to get to its destination. Each LSP requires a distinct label for the packet to travel 
