--- a/mpls.html
+++ b/mpls.html
@@ -12,8 +12,10 @@
       </header>
       <main>
         <article>
-          <h2>The Basics of MPLS</h2>
-          <p>With the purpose of improving packet speed over the internet, MPLS was formulated in the 1990s. 
+          <p>
+            <strong>The Basics of MPLS</strong>
+            <br><br>
+            With the purpose of improving packet speed over the internet, MPLS was formulated in the 1990s. 
             This is a protocol that operates at the network layer in the OSI model. 
             Because it has attributes that resemble those of the Data Link layer, it is described as 
             operating at layer 2.5 of the OSI Model. Essentially between the Data link and 
