--- a/shakespeare.html
+++ b/shakespeare.html
@@ -2,39 +2,39 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, intitial-sclae=1.0">
+        <meta name="viewport" content="width=device-width, intitial-scale=1.0">
         <title>Shakespeare</title>
         <link rel="stylesheet" href="style-shakespeare.css">
     </head>
+    <body>
     <header>
         <h1>Sonnet: The Digital Isle</h1>
     </header>
-    <body>
         <main>
             <article>
                 <section>
                     <h2>Modern Shakespeare</h2>
                     <p>
-                        In Plato's dialog, "Phaedrus," Socrates made the observation 
+                        In Plato's dialogue, "Phaedrus," Socrates made the observation 
                         that poets receive inspiration much in the same way as prophets 
                         or seers. Even though he admits that there is skill involved in 
                         poetry, they are essentially 'gifted' divine knowledge. He also thought that 
                         the poets themselves may not be able to fully understand the 
-                        signifigance of their own works because it transcends 
+                        significance of their own works because it transcends 
                         human understanding. While Socrates did see the world through the lens of another time, 
-                        I do believe that his notice of a poet's special insight are worth 
+                        I do believe that his notion of a poet's special insight are worth 
                         paying attention to.<br><br>
                         My view on poets is a little different, but I do see them as having great 
                         insight that is essential for the rest of us to listen to. Most of us 
                         have gut instincts or these little nudges within us about the world 
                         around us. It could be telling us that some behavior is terribly wrong 
-                        or that some action must be taken, or some mindset must be adopted. 
+                        or that some action must be taken. 
                         For whatever reason that may be unique to each of us, 
                         we end up not fully hearing the message from our inner depths. What I feel 
                         is different about many poets, other than their incredible grasp of 
-                        language, is that they are able to hear and bring to life this insight 
-                        that is whispering from this 'instinctual world' inside of them. They 
-                        then lift it up into the world of conciouse understanding where we can 
+                        language, is that they are able to hear and bring to life this insight.  
+                        They are able to hear the whispering from this 'instinctual world' inside of them. They 
+                        then lift it up into the world of conscious understanding where we can 
                         all see it and take action.
                     </p>
                 </section>
