--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <article>
       <p>
         We are and always have been standing at the threshold of the future. It has always been the right time to  
-        self-reflect before we take that step through the doorway. If we fail to acknowledge where we came from 
-        and what our true nature and values are, then we risk losing the beauty of our heritage. It is 
+        self-reflect before we take that step through the doorway. If we fail to acknowledge where we came from, 
+        then we risk losing the beauty of our heritage. It is 
         true that there is immense pain and suffering in our past. There is also altruism, sacrifice, 
         authenticity, friendship, and the ever-deepening pursuit to find meaning. Just as humanity is 
         capable of intense evil, it is just as capable of good. And I may argue that evil is a direction 
-        with a built-in limitations. Its ulitmate achievement is destruction, a very deffinate end. 
+        with a built-in limitations. Its ulitmate achievement is destruction, a very definite end. 
         Good is different. It is something that grows and has no limits. <br><br>
         The future is and always has been an opportunity where the best parts of us can truly take hold and 
         lift us out of the world of deceit and oppression. By taking action now, we are finding an ever 
