--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         on the masses for millennia.<br><br> 
         The purpose of this blog is to explore timeless wisdom and hopefully, get that much closer to the 
         true essence of us. If we pursue who we truly are, I foresee the discovery of the good within us. 
-        It is paramount that humanity looks at this good and use it as the guiding principles. It is not 
+        It is paramount that humanity looks at this good and uses it as the guiding principles. It is not 
         reasonable to believe that all people will do this. What is reasonable is that deep thinkers take 
         the initiative to guide and teach. Not just speak, but live these truths. Even when it costs us 
         everything. Every voice adds to humanity and drives us closer to a better future. There is power 
